- Fixed "IIGL" font issue when gong to specific page on mobile - Removed focus outlines on mobile navbar button and tournaments button

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Russo+One|Play');
+
 .horizontal-navbar {
   position: fixed;
   width: 100%;
@@ -19,6 +21,10 @@
   line-height: 1;
   background: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") no-repeat center center;
   background-size: 90%;
+}
+
+.horizontal-navbar button:focus {
+  outline:0;
 }
 
 a {
