--- a/src/app/components/tournaments/tournaments.component.css
+++ b/src/app/components/tournaments/tournaments.component.css
@@ -51,6 +51,10 @@ button {
   border: 1px solid transparent;
 }
 
+button:focus {
+  outline:0;
+}
+
 button.disabled {
   background-color: grey;
 }
